--- a/empleados.Rmd
+++ b/empleados.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "empleados"
+title: "Análisis de los empleados de Baltimore"
 author: "Carolina Martínez Escamilla"
 date: "2024-02-14"
 output: html_document
@@ -9,22 +9,16 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r}
+#Borra todas las variables
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+rm(list=ls())
 ```
 
-## Including Plots
+# Importamos datos con Rbase
 
-You can also embed plots, for example:
+```{r}
+datosRbase <- read.csv("Data/Baltimore_City_Employee_Salaries.csv")
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
