Importo datos con Readr

--- a/empleados.Rmd
+++ b/empleados.Rmd
@@ -22,3 +22,10 @@ datosRbase <- read.csv("Data/Baltimore_City_Employee_Salaries.csv")
 
 ```
 
+# Importamos datos con Readr
+
+```{r}
+library(readr)
+nomruta <- "Data/Baltimore_City_Employee_Salaries.csv"
+datosReadr <- read_csv(file = nomruta, col_types = cols(hireDate = col_date(format = "%Y-%m-%d")))
+```
